<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#286093"
            app:navigationIcon="@drawable/baseline_arrow_back_24">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="22dp" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/select_district"
                android:textSize="17sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:text="@string/lease_id"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_LID"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/square_edittext"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:text="@string/enter_password"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/square_edittext"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/confirm_password"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_cPassword"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/square_edittext"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:textSize="15sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/b_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>


</ScrollView>